Import of ROMANENKO/Mojolicious-Plugin-PgAsync-0.02 from CPAN.
gitpan-cpan-distribution: Mojolicious-Plugin-PgAsync
gitpan-cpan-version:      0.02
gitpan-cpan-path:         ROMANENKO/Mojolicious-Plugin-PgAsync-0.02.tar.gz
gitpan-cpan-author:       ROMANENKO
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Mojolicious-Plugin-PgAsync
-version:            0.01
+version:            0.02
 abstract:           ~
 author:
     - Alexander Romanenko <romanenko@cpan.org>
@@ -11,6 +11,7 @@ configure_requires:
 build_requires:
     ExtUtils::MakeMaker:  0
 requires:
+    DBD::Pg:      2.19.0
     Mojolicious:  4.30
 no_index:
     directory:
